objects/LLC_BI__Memo_Data__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Current__c</fullName>
        <description>The value of the field at the time the memo was initiated. This field is automatically populated based on the values input on the loan wall for this field at the time the memo was initiated.  This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Current</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Field_Name__c</fullName>
        <description>The name of the field which values are stored in the current and proposed fields.  This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo. This field specifies which fields on the loan wall are being proposed for changes.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Field_Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Memo_Field_Name__c</fullName>
        <description>The name of the field on the Memo that represents the category. This field is automatically set when a memo is created, and details of the changes are filled in. This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Memo_Field_Name__c</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Memo__c</fullName>
        <description>The Master-Detail relationship with the Memo. This field is automatically set and required. It associates the details of the field changes on the memo with the memo these changes are associated to. This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo.</description>
        <label>Memo</label>
        <referenceTo>LLC_BI__Credit_Memo_Modifcation__c</referenceTo>
        <relationshipLabel>Memo_Data</relationshipLabel>
        <relationshipName>Memo_Data_Records</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Proposed__c</fullName>
        <description>The value of the field at the time the memo was approved/rejected/submitted. This field is set behind the scenes and is used to auto apply changes to the fields adjusted on a memo.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Proposed</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Memo_Data</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Memo Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Memo_Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>